--- a/bom.yaml
+++ b/bom.yaml
@@ -8,5 +8,10 @@
       "install": "true",
       "image": "postgres:10-alpine",
       "namespace": "postgres" 
+  },
+    "postgres": {
+      "install": "true",
+      "image": "postgres:10-alpine",
+      "namespace": "nginx" 
   }
 }
